[package]
name = "character-sheets-rocket"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_mysql"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "mysql"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"